# PythonAutotools

./: .travis.yml  Makefile.am  README.rst  clean.sh  configure.ac  hellomodule.cpp  setup.py  try.sh  try_autotools.sh  try_setup_py.sh
